# promptly-daemon

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh  run.ps1  run.sh
.github/workflows/: ci.yml  release.yml  security-audit.yml
crates/promptly/: Cargo.toml  build.rs
crates/promptly/src/: cli.rs  cloud.rs  config.rs  credentials.rs  daemon_client.rs  daemon_process.rs  fmt.rs  levels.rs  lib.rs  main.rs  projection.rs  prompt.rs  redaction.rs  runner.rs  scoring.rs  signing.rs  style.rs  submission.rs  update_check.rs  updater.rs  visual.rs  web_client.rs
crates/promptly/src/commands/: daemon.rs  doctor.rs  help.rs  init.rs  mod.rs  play.rs  restart.rs  score.rs  session.rs  session_view.rs  status.rs  submit.rs  test.rs  update.rs  watch.rs
crates/promptlyd/: Cargo.toml
crates/promptlyd/src/: api.rs  baseline.rs  bootstrap.rs  checkpoint.rs  cli.rs  clock.rs  config.rs  control_token.rs  correlate.rs  diagnostics.rs  engine.rs  idle.rs  ledger.rs  lib.rs  main.rs  manifest.rs  model.rs  model_map.rs  normalize.rs  otlp.rs  pacing.rs  paths.rs  provenance.rs  scoping.rs  service.rs  session.rs  status.rs  watcher.rs
crates/promptlyd/src/sources/: codex.rs  copilot.rs  cursor.rs  jsonl.rs  mod.rs  otel.rs  registry.rs  vscode.rs
crates/promptlyd/tests/: block_line_replay.rs
