[package]
name = "promptlyd"
description = "Promptly local telemetry daemon: captures Claude Code AI usage and exposes it over a localhost API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "promptlyd"
path = "src/lib.rs"

[[bin]]
name = "promptlyd"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower = { workspace = true, features = ["util"] }
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
async-trait.workspace = true
notify.workspace = true
globset.workspace = true
fs4.workspace = true
rusqlite.workspace = true
uuid.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
